Overflow fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -671,7 +671,7 @@
     }
 
     html {
-        overflow:hidden;
+        overflow-x:hidden;
     }
     
     a {
